:bug: fix z-index header

--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -5,7 +5,7 @@
     position: fixed;
     top: 0;
     background: $black;
-    z-index: 2;
+    z-index: 10;
     ul, li{
         display: inline-block;
         margin: 0;
